--- a/index.html
+++ b/index.html
@@ -16,14 +16,14 @@
 <h2>Notes on using Alpine Linux</h2>
 
 <ul>
-<li><a href="git">git</a></li>
+<li><a href="git.html">git</a></li>
 </ul>
 
 <h3>About</h3>
 <p>
 These pages are <a href="https://github.com/mnvr/alpine">open
-source</a> and are <a href="shell-notebooks">generated from Jupyter
-notebooks</a> with a bash kernel.
+source</a> and are <a href="shell-notebooks.html">generated from
+Jupyter notebooks</a> with a bash kernel.
 </p>
 
 <footer>
