--- a/index.html
+++ b/index.html
@@ -17,7 +17,9 @@
 
 <ul>
 <li><a href="git.html">git</a></li>
+<li><a href="install.html">installing</a></li>
 <li><a href="ash.html">ash</a> - the default shell</li>
+<li><a href="apk.html">apk</a> - alpine package keeper</li>
 </ul>
 
 <h3>About</h3>
