--- a/index.html
+++ b/index.html
@@ -20,6 +20,8 @@
 <li><a href="install.html">installing</a></li>
 <li><a href="ash.html">ash</a> - the default shell</li>
 <li><a href="apk.html">apk</a> - alpine package keeper</li>
+<li><a href="docs.html">documentation</a></li>
+<li><a href="xfce.html">xfce</a> - desktop environment</li>
 </ul>
 
 <h3>About</h3>
