--- a/index.html
+++ b/index.html
@@ -21,7 +21,10 @@
 <li><a href="ash.html">ash</a> - the default shell</li>
 <li><a href="apk.html">apk</a> - alpine package keeper</li>
 <li><a href="docs.html">documentation</a></li>
+<li><a href="history.html">history</a></li>
 <li><a href="xfce.html">xfce</a> - desktop environment</li>
+<li><a href="lightdm.html">lightdm</a> - display manager</li>
+<li><a href="uefi.html">uefi</a> - firmware</li>
 </ul>
 
 <h3>About</h3>
