--- a/index.html
+++ b/index.html
@@ -25,6 +25,8 @@
 <li><a href="xfce.html">xfce</a> - desktop environment</li>
 <li><a href="lightdm.html">lightdm</a> - display manager</li>
 <li><a href="uefi.html">uefi</a> - firmware</li>
+<li><a href="gtk.html">gtk</a> - window toolkit</li>
+<li><a href="emacs.html">emacs</a> - editor</li>
 </ul>
 
 <h3>About</h3>
