--- a/index.html
+++ b/index.html
@@ -26,6 +26,8 @@
 <li><a href="lightdm.html">lightdm</a> - display manager</li>
 <li><a href="uefi.html">uefi</a> - firmware</li>
 <li><a href="gtk.html">gtk</a> - window toolkit</li>
+<li><a href="sys-and-proc.html">/sys, /proc</a> - kernel api</li>
+<li><a href="cat.html">cat</a> - file viewer</li>
 <li><a href="emacs.html">emacs</a> - editor</li>
 </ul>
 
