--- a/index.html
+++ b/index.html
@@ -23,6 +23,8 @@
 <li><a href="docs.html">documentation</a></li>
 <li><a href="history.html">history</a></li>
 <li><a href="xfce.html">xfce</a> - desktop environment</li>
+<li><a href="xterm.html">xterm</a> - terminal emulator</li>
+<li><a href="tty.html">tty</a> - pseudo teletypes</li>
 <li><a href="lightdm.html">lightdm</a> - display manager</li>
 <li><a href="uefi.html">uefi</a> - firmware</li>
 <li><a href="gtk.html">gtk</a> - window toolkit</li>
