--- a/index.html
+++ b/index.html
@@ -13,40 +13,17 @@
 
 <body>
 
-<h2>Notes on using Alpine Linux</h2>
+Moved to <a href="https://mnvr.in/mars">mnvr.in/mars</a>.
 
-<ul>
-<li><a href="install.html">installing</a></li>
-<li><a href="git.html">git</a></li>
-<li><a href="ash.html">ash</a> - the default shell</li>
-<li><a href="apk.html">apk</a> - alpine package keeper</li>
-<li><a href="docs.html">documentation</a></li>
-<li><a href="history.html">history</a></li>
-<li><a href="xfce.html">xfce</a> - desktop environment</li>
-<li><a href="xterm.html">xterm</a> - terminal emulator</li>
-<li><a href="xfconf.html">xfconf</a> - xfce settings</li>
-<li><a href="tty.html">tty</a> - pseudo teletypes</li>
-<li><a href="lightdm.html">lightdm</a> - display manager</li>
-<li><a href="uefi.html">uefi</a> - firmware</li>
-<li><a href="gtk.html">gtk</a> - window toolkit</li>
-<li><a href="sys-and-proc.html">/sys, /proc</a> - kernel api</li>
-<li><a href="cat.html">cat</a> - file viewer</li>
-<li><a href="upgrade.html">upgrading</a></li>
-<li><a href="emacs.html">emacs</a> - editor</li>
-</ul>
-
-<h3>About</h3>
-<p>
-These pages are <a href="https://github.com/mnvr/alpine">open
-source</a> and are <a href="shell-notebooks.html">generated from
-Jupyter notebooks</a> with a bash kernel.
-</p>
-
-<footer>
-<p>
-Last updated: <time></time>
-</p>
-</footer>
+<small>
+<blockquote style="max-width: 40rem">
+(Context: An earlier version of these notes were Alpine specific, and
+used <a href="https://github.com/mnvr/alpine">Jupyter
+notebooks</a>. Now neither of these things are true and the pages are
+not here anymore, but the content of the pages still survives in the
+link above)
+</blockquote>
+</small>
 
 </body>
 
